<resources>
    <string name="app_name">Login Viewpager</string>
    <string name="welcome">Welcome</string>
    <string name="Login">Login</string>
    <string name="go">Go</string>
    <string name="contact_us">Contact Us</string>
    <string name="logo">Logo</string>
    <string name="phone_number">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="email_address">E-mail</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="not_a_member">Not a member</string>
    <string name="now">Join Now</string>
</resources>