<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/newblackbg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/loginUserPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/phone_number"
                android:background="@drawable/edittext_frame"
                android:drawableStart="@drawable/ic_baseline_smartphone_24"
                android:drawablePadding="10dp"
                android:drawableTint="#ffffff"
                android:elevation="0dp"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="10"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                tools:ignore="RtlSymmetry" />

            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:id="@+id/loginUserPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/loginUserPhone"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/password"
                android:background="@drawable/edittext_frame"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:drawableTint="#ffffff"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:elevation="0dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:additionalTouchTargetSize="50dp"
                app:drawable_hide="@drawable/ic_baseline_remove_red_eye_24"
                app:drawable_show="@drawable/ic_baseline_visibility_off_24"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loginForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginUserPassword"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/forgot_password"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginLoginBT"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/loginForgotPassword"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/button_design"
                android:elevation="10dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginLoginBT"
                android:gravity="center"
                android:padding="10dp"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/notMemberTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_a_member"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/loginSignUpTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_toEndOf="@+id/notMemberTV"
                    android:paddingStart="7dp"
                    android:paddingEnd="7dp"
                    android:text="@string/sign_up"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_toEndOf="@+id/loginSignUpTV"
                    android:text="@string/now"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/progressbar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:translationZ="10dp"
            android:visibility="gone"
            tools:ignore="ExtraText">
 />
        </RelativeLayout>


    </RelativeLayout>

</FrameLayout>