<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp" />
    <!-- #2c5291 -->

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:letterSpacing="0.1"
        android:text="@string/welcome"
        android:textColor="#d5c536"
        android:textSize="38sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:letterSpacing="0.1"
        android:text="@string/Login"
        android:textColor="#d5c536"
        android:textSize="21sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:animateLayoutChanges="true"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/login_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                app:elevation="0dp">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/home_tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/oldololive"
                    android:fillViewport="true"
                    app:tabIndicatorColor="#ffffff"
                    app:tabMode="fixed"
                    app:tabRippleColor="@color/textColor"
                    app:tabSelectedTextColor="#ffffff"
                    app:tabTextColor="@color/gray" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/home_view_pager"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@drawable/newblackbg">

            </androidx.viewpager.widget.ViewPager>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goButton"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_below="@+id/container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-24dp"
        android:background="@drawable/button_layer"
        android:text="@string/go"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/contactInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-38dp"
        android:text="@string/contact_us"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/contactInfo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/gray" />

    <ScrollView
        android:id="@+id/contactInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/whatsLinear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/logo" />

                <TextView
                    android:id="@+id/whatsAppNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="@string/phone_number"
                    android:textColor="#ffffff"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/callLinear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/logo" />

                <TextView
                    android:id="@+id/callNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="@string/phone_number"
                    android:textColor="#ffffff"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/telegramLinear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/logo"/>

                <TextView
                    android:id="@+id/telegramNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="@string/phone_number"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>



    <RelativeLayout
        android:id="@+id/progressbar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:translationZ="10dp"
        android:visibility="gone">
 />
    </RelativeLayout>


</RelativeLayout>