<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/newblackbg"
        android:fillViewport="true"
        tools:context=".SignUp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/SignUpUserName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:autofillHints="@string/user_name"
                    android:background="@drawable/edittext_frame"
                    android:backgroundTint="#ffffff"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="#ffffff"
                    android:hint="@string/user_name"
                    android:inputType="textCapSentences"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/SignUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/SignUpUserName"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:autofillHints="@string/email_address"
                    android:background="@drawable/edittext_frame"
                    android:backgroundTint="#ffffff"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="#ffffff"
                    android:hint="@string/email_address"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/SignUpPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/SignUpEmail"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:autofillHints="@string/phone_number"
                    android:background="@drawable/edittext_frame"
                    android:backgroundTint="#ffffff"
                    android:drawableStart="@drawable/ic_baseline_smartphone_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="#ffffff"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    tools:ignore="RtlSymmetry" />

                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/SignUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/SignUpPhone"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:autofillHints="@string/password"
                    android:background="@drawable/edittext_frame"
                    android:backgroundTint="#ffffff"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="#ffffff"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    app:additionalTouchTargetSize="50dp"
                    app:drawable_hide="@drawable/ic_baseline_remove_red_eye_24"
                    app:drawable_show="@drawable/ic_baseline_visibility_off_24"
                    tools:ignore="RtlSymmetry" />

                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText

                    android:id="@+id/SignUpmPin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/SignUpPassword"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:autofillHints="@string/mPin"
                    android:background="@drawable/edittext_frame"
                    android:backgroundTint="#ffffff"
                    android:drawableStart="@drawable/ic_baseline_password_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="#ffffff"
                    android:elevation="0dp"
                    android:hint="@string/mPin"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    app:additionalTouchTargetSize="50dp"
                    app:drawable_hide="@drawable/ic_baseline_remove_red_eye_24"
                    app:drawable_show="@drawable/ic_baseline_visibility_off_24"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/SignUpBT"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/SignUpmPin"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/button_design"
                    android:elevation="0dp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/progressbar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:translationZ="10dp"
                android:visibility="gone"
                tools:ignore="ExtraText">
                />
            </RelativeLayout>
        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>
</FrameLayout>